# audio-api

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
docs/: known-issues.md  live-subtitles-design.md  plan-6-real-transcription-design.md  spec.md  stream-e2e.md  technical-guide.md  user-guide.md
docs/diagrams/: architecture.excalidraw  job-lifecycle.excalidraw
docs/plans/: plan-1-skeleton-and-format-slice.md  plan-2-vad-sync-webhooks.md  plan-3-language-and-dme-classify.md  plan-5-live-subtitles-skeleton.md
infra/: docker-compose.yml
infra/grafana/: tempo.yaml
postman/: README.md  audio-api.postman_collection.json  audio-api.postman_environment.json
scripts/: bench-quality.py  e2e-stream.ts  seed-admin-token.sh  seed-token.sh  smoke-stream.ts  smoke.ts  submit-stream.sh
services/worker-stream-pod/: Dockerfile  pyproject.toml
services/worker-stream-pod/src/worker_stream_pod/: __init__.py  __main__.py  audio_source.py  caption_ts_muxer.py  cdp.py  cea708.py  cue_assembler.py  cue_emitter.py  fanout.py  heartbeat.py  hls_server.py  lifecycle.py  smpte2038.py  transcriber.py  ts_mux.py  vad_gate.py  video_preview.py  vtt_writer.py  worker.py  ws_server.py
services/worker-stream-pod/tests/: test_audio_source.py  test_audio_source_relay.py  test_caption_egress.py  test_caption_ts_muxer.py  test_cdp.py  test_cea708.py  test_cue_assembler.py  test_cue_emitter.py  test_e2e_caption_ts.py  test_e2e_srt_ingest.py  test_e2e_stream.py  test_fanout.py  test_heartbeat.py  test_hls_server.py  test_lifecycle.py  test_smpte2038.py  test_srt_reconnect.py  test_srt_source.py  test_ssrf.py  test_start_video_preview.py  test_transcriber.py  test_ts_mux.py  test_vad_gate.py  test_video_preview.py  test_vtt_writer.py
services/worker-stream-pod/tests/fixtures/: README.md
services/worker-stream-supervisor/: Dockerfile  pyproject.toml
services/worker-stream-supervisor/src/worker_stream_supervisor/: __init__.py  __main__.py  forker.py  pool.py  reaper.py  settings.py  worker.py
services/worker-stream-supervisor/tests/: test_forker.py  test_hls_provision.py  test_pool.py  test_reaper.py  test_settings.py  test_srt_provision.py
services/worker-vad/: Dockerfile  pyproject.toml
services/worker-vad/src/worker_vad/: __init__.py  __main__.py  vad.py  worker.py
services/worker-vad/tests/: test_vad.py
(+129 files in other folders)
