[project]
name = "worker-stream-pod"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "py-common @ file:../../packages/py-common",
  "nats-py",
  "psycopg[binary]",
  "websockets>=12.0",
  "numpy",
  "faster-whisper",
  "silero-vad"
]
[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "soundfile"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# The default lane is fast and model-free; the real-model checks are gated
# behind `-m slow` (run with `pytest -m slow`).
addopts = "-m 'not slow'"
markers = [
  "slow: exercises a real model (Silero / faster-whisper); excluded by default",
]
