[project]
name = "worker-stream-supervisor"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "py-common @ file:../../packages/py-common",
  "nats-py>=2.6.0",
  "psycopg[binary]>=3.1.0"
]
[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
