[project]
name = "worker-vad"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "py-common @ file:../../packages/py-common",
  "silero-vad>=5.0.0",
  "soundfile>=0.12.1",
  "numpy>=1.26.0",
  "torch>=2.2.0",
  "scipy>=1.12.0"
]
[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
